ngpims/ingress/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ppims
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      app: frontend
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: octoperf/kraken-administration-ui:1.2.1
          name: frontend
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: ppims
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: ppims
  name: frontend-service-np
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
  type: NodePort
