ngpims/ingress/ingress-acl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-acl-ppims-app
  namespace: ppims
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
######Rule-1
spec:
  rules:
  - host: recruitment.police.gov.bd
    http:
      paths:
      #- path: /
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
           name: recruit-ui-cip-svc
           port: 
            number: 3000
